--- a/expo/package.json
+++ b/expo/package.json
@@ -9,6 +9,9 @@
   },
   "dependencies": {
     "@react-native-community/eslint-config": "^3.0.1",
+    "@react-native-community/slider": "^4.1.6",
+    "@react-navigation/native": "^6.0.2",
+    "@react-navigation/native-stack": "^6.1.0",
     "expo": "~42.0.1",
     "expo-av": "~9.2.3",
     "expo-font": "~9.2.1",
@@ -18,6 +21,8 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-safe-area-context": "3.2.0",
+    "react-native-screens": "~3.4.0",
     "react-native-svg": "12.1.1",
     "react-native-web": "~0.13.12"
   },
