--- a/expo/package.json
+++ b/expo/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
+    "@types/lodash": "^4.14.173",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
     "eslint": "^7.32.0",
