--- a/expo/app.json
+++ b/expo/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "expo",
-    "slug": "expo",
+    "name": "Datagame Live",
+    "slug": "datagame",
     "version": "1.0.0",
     "orientation": "default",
     "icon": "./assets/icon.png",
