sounds; leave disabled cards out of cached popularity stats

--- a/expo/app.json
+++ b/expo/app.json
@@ -18,7 +18,8 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.dylanburati.datagame"
+      "bundleIdentifier": "com.dylanburati.datagame",
+      "buildNumber": "3"
     },
     "android": {
       "adaptiveIcon": {
