--- a/expo/package.json
+++ b/expo/package.json
@@ -40,6 +40,7 @@
     "@types/phoenix": "^1.5.3",
     "@types/react": "~16.9.35",
     "@types/react-native": "~0.63.2",
+    "babel-plugin-lodash": "^3.3.4",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
     "typescript": "~4.0.0"
@@ -50,5 +51,6 @@
   "prettier": {
     "singleQuote": true
   },
+  "homepage": "https://datagame.live/expo",
   "private": true
 }
