--- a/expo/app.json
+++ b/expo/app.json
@@ -22,10 +22,8 @@
       "buildNumber": "5"
     },
     "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
+      "package": "com.dylanburati.datagame",
+      "versionCode": 5
     },
     "web": {
       "favicon": "./assets/favicon.png"
