--- a/expo/package.json
+++ b/expo/package.json
@@ -8,6 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@formatjs/intl-datetimeformat": "^4.2.5",
+    "@formatjs/intl-displaynames": "^5.2.5",
+    "@formatjs/intl-getcanonicallocales": "^1.7.3",
+    "@formatjs/intl-listformat": "^6.3.5",
+    "@formatjs/intl-locale": "^2.4.39",
+    "@formatjs/intl-numberformat": "^7.2.5",
+    "@formatjs/intl-pluralrules": "^4.1.5",
+    "@formatjs/intl-relativetimeformat": "^9.3.2",
     "@react-native-async-storage/async-storage": "^1.15.9",
     "@react-native-community/eslint-config": "^3.0.1",
     "@react-native-community/slider": "^4.1.6",
