upgrade to expo sdk 44, init logger in context

--- a/expo/package.json
+++ b/expo/package.json
@@ -1,6 +1,7 @@
 {
   "main": "./index",
   "scripts": {
+    "lint": "eslint --ext .js,.ts,.tsx --ignore-path .gitignore ./",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -16,47 +17,51 @@
     "@formatjs/intl-numberformat": "^7.2.5",
     "@formatjs/intl-pluralrules": "^4.1.5",
     "@formatjs/intl-relativetimeformat": "^9.3.2",
-    "@react-native-async-storage/async-storage": "^1.15.9",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/eslint-config": "^3.0.1",
-    "@react-native-community/slider": "^4.1.6",
-    "@react-native-segmented-control/segmented-control": "2.3.0",
+    "@react-native-community/slider": "4.1.12",
+    "@react-native-segmented-control/segmented-control": "2.4.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "~42.0.1",
-    "expo-av": "~9.2.3",
-    "expo-font": "~9.2.1",
-    "expo-localization": "~10.2.0",
-    "expo-screen-orientation": "~3.2.1",
-    "expo-sensors": "~10.2.2",
-    "expo-status-bar": "~1.0.4",
+    "expo": "^44.0.0",
+    "expo-av": "~10.2.0",
+    "expo-dev-client": "~0.8.0",
+    "expo-font": "~10.0.4",
+    "expo-localization": "~12.0.0",
+    "expo-screen-orientation": "~4.1.1",
+    "expo-sensors": "~11.1.0",
+    "expo-splash-screen": "~0.14.1",
+    "expo-status-bar": "~1.2.0",
     "object-inspect": "^1.11.0",
     "phoenix": "^1.6.2",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
+    "react": "17.0.1",
+    "react-dom": "17.0.1",
     "react-intl": "^5.20.12",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
+    "react-native": "0.64.3",
+    "react-native-gesture-handler": "~2.1.0",
+    "react-native-safe-area-context": "3.3.2",
+    "react-native-screens": "~3.10.1",
     "react-native-svg": "12.1.1",
-    "react-native-web": "~0.13.12",
+    "react-native-web": "0.17.1",
     "recyclerlistview": "^3.0.5",
     "rn-swipeable-panel": "^1.2.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0",
+    "@babel/core": "^7.12.9",
     "@types/lodash": "^4.14.173",
     "@types/object-inspect": "^1.8.1",
     "@types/phoenix": "^1.5.3",
-    "@types/react": "~16.9.35",
-    "@types/react-native": "~0.63.2",
+    "@types/react": "~17.0.21",
+    "@types/react-native": "~0.64.12",
     "babel-plugin-lodash": "^3.3.4",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
-    "typescript": "~4.0.0"
+    "typescript": "~4.3.5"
   },
   "eslintConfig": {
-    "extends": "@react-native-community"
+    "extends": [
+      "@react-native-community"
+    ]
   },
   "prettier": {
     "singleQuote": true
