--- a/expo/package.json
+++ b/expo/package.json
@@ -32,6 +32,7 @@
     "expo-sensors": "~11.1.0",
     "expo-splash-screen": "~0.14.1",
     "expo-status-bar": "~1.2.0",
+    "expo-system-ui": "~1.1.0",
     "object-inspect": "^1.11.0",
     "phoenix": "^1.6.2",
     "react": "17.0.1",
@@ -67,5 +68,7 @@
     "singleQuote": true
   },
   "homepage": "https://datagame.live/expo",
-  "private": true
+  "private": true,
+  "name": "datagame-live-native",
+  "version": "1.0.1"
 }
