Trivia/party: initiate turns and check answers on the server

--- a/expo/package.json
+++ b/expo/package.json
@@ -66,7 +66,11 @@
   "eslintConfig": {
     "extends": [
       "@react-native-community"
-    ]
+    ],
+    "rules": {
+      "no-shadow": "off",
+      "@typescript-eslint/no-shadow": "error"
+    }
   },
   "prettier": {
     "singleQuote": true
