--- a/expo/package.json
+++ b/expo/package.json
@@ -10,58 +10,58 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@formatjs/intl-datetimeformat": "^4.2.5",
-    "@formatjs/intl-displaynames": "^5.2.5",
-    "@formatjs/intl-getcanonicallocales": "^1.7.3",
-    "@formatjs/intl-listformat": "^6.3.5",
-    "@formatjs/intl-locale": "^2.4.39",
-    "@formatjs/intl-numberformat": "^7.2.5",
-    "@formatjs/intl-pluralrules": "^4.1.5",
-    "@formatjs/intl-relativetimeformat": "^9.3.2",
+    "@formatjs/intl-datetimeformat": "^6.4.3",
+    "@formatjs/intl-displaynames": "^6.2.3",
+    "@formatjs/intl-getcanonicallocales": "^2.0.5",
+    "@formatjs/intl-listformat": "^7.1.7",
+    "@formatjs/intl-locale": "^3.0.11",
+    "@formatjs/intl-numberformat": "^8.3.3",
+    "@formatjs/intl-pluralrules": "^5.1.8",
+    "@formatjs/intl-relativetimeformat": "^11.1.8",
     "@jest/globals": "^28.1.1",
-    "@react-native-async-storage/async-storage": "~1.15.0",
+    "@react-native-async-storage/async-storage": "~1.17.3",
     "@react-native-community/eslint-config": "^3.0.1",
-    "@react-native-community/slider": "4.1.12",
+    "@react-native-community/slider": "4.2.4",
     "@react-native-segmented-control/segmented-control": "2.4.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "^44.0.0",
-    "expo-av": "~10.2.0",
-    "expo-dev-client": "~0.8.0",
-    "expo-font": "~10.0.4",
-    "expo-localization": "~12.0.0",
-    "expo-screen-orientation": "~4.1.1",
-    "expo-sensors": "~11.1.0",
-    "expo-splash-screen": "~0.14.1",
-    "expo-status-bar": "~1.2.0",
-    "expo-system-ui": "~1.1.0",
+    "expo": "^47.0.0",
+    "expo-av": "~13.0.2",
+    "expo-dev-client": "~2.0.1",
+    "expo-font": "~11.0.1",
+    "expo-localization": "~14.0.0",
+    "expo-screen-orientation": "~5.0.1",
+    "expo-sensors": "~12.0.1",
+    "expo-splash-screen": "~0.17.5",
+    "expo-status-bar": "~1.4.2",
+    "expo-system-ui": "~2.0.1",
     "jest": "^26.6.3",
-    "jest-expo": "^45.0.1",
+    "jest-expo": "^47.0.0",
     "object-inspect": "^1.11.0",
     "phoenix": "^1.6.2",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-intl": "^5.20.12",
-    "react-native": "0.64.3",
-    "react-native-gesture-handler": "~2.1.0",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.10.1",
-    "react-native-svg": "12.1.1",
-    "react-native-web": "0.17.1",
+    "react": "18.1.0",
+    "react-dom": "18.1.0",
+    "react-intl": "^6.2.5",
+    "react-native": "0.70.5",
+    "react-native-gesture-handler": "~2.8.0",
+    "react-native-safe-area-context": "4.4.1",
+    "react-native-screens": "~3.18.0",
+    "react-native-svg": "13.4.0",
+    "react-native-web": "~0.18.7",
     "recyclerlistview": "^3.0.5",
     "rn-swipeable-panel": "^1.2.6"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.19.3",
     "@types/lodash": "^4.14.173",
     "@types/object-inspect": "^1.8.1",
     "@types/phoenix": "^1.5.3",
-    "@types/react": "~17.0.21",
-    "@types/react-native": "~0.64.12",
+    "@types/react": "~18.0.24",
+    "@types/react-native": "~0.70.6",
     "babel-plugin-lodash": "^3.3.4",
     "eslint": "^7.32.0",
     "prettier": "^2.3.2",
-    "typescript": "~4.3.5"
+    "typescript": "^4.6.3"
   },
   "eslintConfig": {
     "extends": [
