--- a/expo/package.json
+++ b/expo/package.json
@@ -26,7 +26,7 @@
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
     "expo": "^47.0.0",
-    "expo-av": "~13.0.2",
+    "expo-av": "~13.0.3",
     "expo-dev-client": "~2.0.1",
     "expo-font": "~11.0.1",
     "expo-localization": "~14.0.0",
@@ -42,14 +42,13 @@
     "react": "18.1.0",
     "react-dom": "18.1.0",
     "react-intl": "^6.2.5",
-    "react-native": "0.70.5",
+    "react-native": "0.70.8",
     "react-native-gesture-handler": "~2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
-    "recyclerlistview": "^3.0.5",
-    "rn-swipeable-panel": "^1.2.6"
+    "recyclerlistview": "^3.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.19.3",
