CircleCI: specify resource_class for macOS builder

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,6 +32,7 @@ jobs:
   macos-build-and-deploy:
     macos:
       xcode: 14.3.0
+    resource_class: medium
     environment:
       FL_OUTPUT_DIR: output
       GEM_HOME: ~/.ruby
