--- a/app/assets/package.json
+++ b/app/assets/package.json
@@ -6,6 +6,9 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "dayjs": "^1.11.8"
+    "dayjs": "^1.11.8",
+    "phoenix": "../deps/phoenix",
+    "phoenix_html": "../deps/phoenix_html",
+    "phoenix_live_view": "../deps/phoenix_live_view"
   }
 }
