--- a/app/native/app_native/Cargo.toml
+++ b/app/native/app_native/Cargo.toml
@@ -16,7 +16,10 @@ lazy_static = "1.4.0"
 nom = "7.1.3"
 rand = "0.8.5"
 regex = "1.8.4"
-rustler = "0.29.0"
+rustler = "0.29.1"
 serde = { version = "1.0.164", features = ["derive"] }
 serde_json = "1.0.97"
 smallvec = { version = "1.10.0", features = ["serde"] }
+
+[dev-dependencies]
+rstest = "0.18.1"
