--- a/app/native/app_native/Cargo.toml
+++ b/app/native/app_native/Cargo.toml
@@ -11,6 +11,7 @@ crate-type = ["cdylib"]
 
 [dependencies]
 chrono = { version = "0.4.26", features = ["serde"] }
+derive_more = "0.99.17"
 error-chain = "0.12.4"
 lazy_static = "1.4.0"
 nom = "7.1.3"
