--- a/expo/package.json
+++ b/expo/package.json
@@ -10,7 +10,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@expo/webpack-config": "^0.17.2",
+    "@expo/webpack-config": "^18.0.1",
     "@formatjs/intl-datetimeformat": "^6.4.3",
     "@formatjs/intl-displaynames": "^6.2.3",
     "@formatjs/intl-getcanonicallocales": "^2.0.5",
@@ -20,33 +20,33 @@
     "@formatjs/intl-pluralrules": "^5.1.8",
     "@formatjs/intl-relativetimeformat": "^11.1.8",
     "@jest/globals": "^28.1.1",
-    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-async-storage/async-storage": "1.17.11",
     "@react-native-community/eslint-config": "^3.0.1",
-    "@react-native-community/slider": "4.2.4",
+    "@react-native-community/slider": "4.4.2",
     "@react-native-segmented-control/segmented-control": "2.4.0",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/native-stack": "^6.1.0",
-    "expo": "~47.0.14",
-    "expo-av": "~13.0.3",
-    "expo-dev-client": "~2.0.1",
-    "expo-font": "~11.0.1",
-    "expo-localization": "~14.0.0",
-    "expo-screen-orientation": "~5.0.1",
-    "expo-sensors": "~12.0.1",
-    "expo-splash-screen": "~0.17.5",
+    "expo": "^48.0.0",
+    "expo-av": "~13.2.1",
+    "expo-dev-client": "~2.2.1",
+    "expo-font": "~11.1.1",
+    "expo-localization": "~14.1.1",
+    "expo-screen-orientation": "~5.1.1",
+    "expo-sensors": "~12.1.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.0.1",
-    "jest": "^26.6.3",
+    "expo-system-ui": "~2.2.1",
+    "jest": "^29.2.1",
     "jest-expo": "^47.0.0",
     "object-inspect": "^1.11.0",
     "phoenix": "^1.6.2",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-intl": "^6.2.5",
-    "react-native": "0.70.8",
-    "react-native-gesture-handler": "~2.8.0",
-    "react-native-safe-area-context": "4.4.1",
-    "react-native-screens": "~3.18.0",
+    "react-native": "0.71.8",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "react-native-svg": "13.4.0",
     "react-native-web": "~0.18.7",
     "recyclerlistview": "^3.0.5"
